# GKOM-well-with-wheel

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  NOTICE.md  README.md  studnia-z-kolowrotem.sln  well-with-wheel.sln
.github/workflows/: linux.yaml  windows.yaml
cmake/: FetchGLM.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake
docs/: model-generator.md
studnia-z-kolowrotem/: abc.DDS  gl_05.vert  plank.DDS  studnia-z-kolowrotem.vcxproj  studnia-z-kolowrotem.vcxproj.filters  test.DDS  texture.DDS  wood.DDS  yas.DDS
studnia-z-kolowrotem/assets/shaders/: brick.vert  gl_05.frag  gl_05.vert  main.frag  main.vert
studnia-z-kolowrotem/assets/textures/: grass.dds  stone.dds
studnia-z-kolowrotem/src/: Main.cpp  gl_05.cpp
studnia-z-kolowrotem/src/Controler/: ActionListener.cpp  ActionListener.h  Camera.cpp  Camera.h  KeyboardListener.cpp  KeyboardListener.h  MouseListener.cpp  MouseListener.h  WheelControler.cpp  WheelControler.h
studnia-z-kolowrotem/src/Controller/: Camera.cpp  Camera.h
studnia-z-kolowrotem/src/GlModel/: GlModel.cpp  GlModel.h
studnia-z-kolowrotem/src/Graphics/: Image.cpp  IndexGroup.h  MipmapTexture.cpp  MipmapTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
studnia-z-kolowrotem/src/Graphics/Shader/: GlProgram.cpp  Shader.cpp  ShaderType.cpp
studnia-z-kolowrotem/src/LibraryExceptions/: GlfwException.cpp  GlfwException.h  LibraryException.h  ShaderException.cpp  SoilException.h
studnia-z-kolowrotem/src/Model/: BrickGlModel.cpp  BrickGlModel.h  EnvironmentGlModel.cpp  EnvironmentGlModel.h  EnvironmentModel.cpp  EnvironmentModel.h  GlModel.cpp  GlModel.h  RoofModel.h  WellGlModel.cpp  WellGlModel.h  WellModel.cpp  WellModel.h  WheelModel.cpp  WheelModel.h
studnia-z-kolowrotem/src/ModelGeneration/: BracketGlModelGenerator.cpp  BracketGlModelGenerator.h  BrickGlModelGenerator.cpp  BrickGlModelGenerator.h  CompoundModelGenerator.cpp  CompoundModelGenerator.h  CuboidGenerator.cpp  CuboidGenerator.h  CylinderGenerator.cpp  CylinderGenerator.h  EnvironmentGlModelGenerator.cpp  EnvironmentGlModelGenerator.h  GeneratorBase.cpp  GeneratorBase.h  ModelGenerator.cpp  ModelGenerator.h  PlaneGenerator.h  SmoothShapeGenerator.cpp  SmoothShapeGenerator.h  WellGlModelGenerator.cpp  WellGlModelGenerator.h
studnia-z-kolowrotem/src/ModelGeneration/BasicGenerators/: ClosedCylinderGenerator.cpp  ClosedCylinderGenerator.h  CompoundModelGenerator.cpp  CompoundModelGenerator.h  CuboidGenerator.cpp  CuboidGenerator.h  CylinderGenerator.cpp  CylinderGenerator.h  HollowCylinderGenerator.cpp  HollowCylinderGenerator.h  ModelGenerator.cpp  ModelGenerator.h  PlaneGenerator.cpp  PlaneGenerator.h  PrimitiveGenerator.cpp  PrimitiveGenerator.h  SmoothShapeGenerator.cpp  SmoothShapeGenerator.h
studnia-z-kolowrotem/src/ModelGeneration/EnvironmentGeneration/: EnvironmentGenerator.cpp  EnvironmentGenerator.h
studnia-z-kolowrotem/src/ModelGeneration/WellGeneration/: SpinningWheelGenerator.cpp  SpinningWheelGenerator.h  WellBaseGenerator.cpp  WellBaseGenerator.h  WellRoofGenerator.cpp  WellRoofGenerator.h  WheelGenerator.cpp  WheelGenerator.h  WoodenStandGenerator.cpp  WoodenStandGenerator.h
studnia-z-kolowrotem/src/Startup/: Application.cpp  Application.h  Environment.cpp  Environment.h  Main.cpp  MainWindow.cpp  MainWindow.h  Scene.cpp  Scene.h  Well.cpp  Well.h
studnia-z-kolowrotem/src/System/: FpsLogger.cpp  FpsLogger.h  Numbers.h  Stopwatch.cpp  Stopwatch.h  Window.cpp  Window.h
studnia-z-kolowrotem/src/View/: BrickGlView.cpp  BrickGlView.h  DynamicGlView.h  EnvironmentGlView.cpp  EnvironmentGlView.h  GlView.cpp  GlView.h  StaticGlView.h  WellGlView.cpp  WellGlView.h
well-with-wheel/: well-with-wheel.vcxproj  well-with-wheel.vcxproj.filters
well-with-wheel/assets/shaders/: main.frag  main.vert
well-with-wheel/assets/textures/: sky.dds
well-with-wheel/src/Controler/: ActionListener.cpp  ActionListener.h  KeyboardListener.cpp  KeyboardListener.h  MouseListener.cpp  WheelControler.cpp  WheelControler.h
well-with-wheel/src/Controller/: ActionListener.cpp  ActionListener.h  Camera.cpp  Camera.h  KeyboardListener.cpp  KeyboardListener.h  MouseListener.cpp  MouseListener.h  WheelController.cpp  WheelController.h
well-with-wheel/src/GlModel/: GlModel.cpp  GlModel.h
well-with-wheel/src/Graphics/: Image.h  IndexGroup.h  MipmapTexture.cpp  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
well-with-wheel/src/Graphics/Shader/: GlProgram.cpp  GlProgram.h  Shader.cpp  Shader.h  ShaderException.cpp  ShaderException.h  ShaderType.cpp  ShaderType.h
well-with-wheel/src/LibraryExceptions/: ShaderException.h  SoilException.cpp
well-with-wheel/src/Model/: EnvironmentModel.h  RoofModel.h  WellModel.h  WheelModel.h
well-with-wheel/src/ModelGeneration/BasicGenerators/: ClosedCylinderGenerator.cpp  ClosedCylinderGenerator.h  CompoundModelGenerator.cpp  CompoundModelGenerator.h  CuboidGenerator.cpp  CuboidGenerator.h  CylinderGenerator.cpp  CylinderGenerator.h  HollowCylinderGenerator.cpp  HollowCylinderGenerator.h  ModelGenerator.cpp  ModelGenerator.h  PlaneGenerator.cpp  PlaneGenerator.h  PrimitiveGenerator.cpp  PrimitiveGenerator.h  SmoothShapeGenerator.cpp  SmoothShapeGenerator.h
well-with-wheel/src/ModelGeneration/WellGeneration/: WellBaseGenerator.cpp  WellBaseGenerator.h  WellRoofGenerator.cpp  WellRoofGenerator.h  WheelGenerator.cpp  WheelGenerator.h  WoodenStandGenerator.cpp  WoodenStandGenerator.h
well-with-wheel/src/Startup/: Environment.cpp  Environment.h  Main.cpp  MainWindow.cpp  MainWindow.h  Scene.cpp  Scene.h  Well.cpp  Well.h
well-with-wheel/src/System/: Stopwatch.cpp  Stopwatch.h  Window.cpp  Window.h
well-with-wheel/src/View/: DynamicGlView.cpp  DynamicGlView.h  GlView.cpp  GlView.h  StaticGlView.cpp  StaticGlView.h
